--- a/atlas-api/app/build.gradle
+++ b/atlas-api/app/build.gradle
@@ -26,6 +26,9 @@ dependencies {
 
     // JSON parsing
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.2'
+
+    // Logging (SLF4J + Logback)
+    implementation 'ch.qos.logback:logback-classic:1.5.6'
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
